# SecondBrainAgent

./: .env  .gitignore  APPLY_DELTA_v30_10.md  APPLY_DELTA_v30_11.md  APPLY_DELTA_v30_12.md  APPLY_DELTA_v30_13.md  APPLY_DELTA_v30_14.md  APPLY_DELTA_v30_15.md  APPLY_DELTA_v30_16.md  APPLY_DELTA_v30_17.md  APPLY_DELTA_v30_18.md  APPLY_DELTA_v30_24.md  APPLY_DELTA_v30_7.md  APPLY_DELTA_v30_8.md  APPLY_P0_DELTA.md  BEREINIGUNG_v8.1.md  CHANGELOG_v10.1.md  CHANGELOG_v10.2.md  CHANGELOG_v10.3.md  CHANGELOG_v10.md  CHANGELOG_v8.1.1.md  CHANGELOG_v8.1.2.md  CHANGELOG_v8.2.1.md  CHANGELOG_v8.2.2.md  CHANGELOG_v9.0.md  CHANGELOG_v9.5.md  CHANGELOG_v9.6.md  CHANGELOG_v9.7.md  CHANGELOG_v9.8.md  CHANGELOG_v9.9.md  CHANGELOG_v9_FINAL.md  DELETE_MANIFEST_v30_12.txt  DELTA_MANIFEST_P0.json  DELTA_MANIFEST_v30_19.json  DELTA_MANIFEST_v30_20.json  DELTA_MANIFEST_v30_24.json  DELTA_MANIFEST_v30_30.json  DELTA_MANIFEST_v30_31.json  DELTA_MANIFEST_v30_32.json  DELTA_MANIFEST_v30_33.json  (+21 more)
SecondBrain-Agent/: .gitignore  APPLY_DELTA_v30_19.md  APPLY_DELTA_v30_20.md  APPLY_DELTA_v30_21.md  APPLY_DELTA_v30_22.md  APPLY_DELTA_v30_23.md  APPLY_DELTA_v30_25.md  APPLY_DELTA_v30_26.md  APPLY_DELTA_v30_27.md  APPLY_DELTA_v30_28.md  APPLY_DELTA_v30_29.md  APPLY_DELTA_v30_30.md  APPLY_DELTA_v30_31.md  APPLY_DELTA_v30_32.md  APPLY_DELTA_v30_33.md  APPLY_DELTA_v30_34.md  APPLY_DELTA_v30_35.md  APPLY_DELTA_v30_36.md  APPLY_DELTA_v30_40.md  APPLY_DELTA_v30_41.md  APPLY_DELTA_v30_42.md  APPLY_DELTA_v30_43.md  APPLY_DELTA_v30_44.md  APPLY_DELTA_v30_45.md  APPLY_DELTA_v30_46.md  APPLY_DELTA_v30_9.md  CHANGELOG_v10.4_v10.5_FOUNDATION.md  CHANGELOG_v10.8.md  CHANGELOG_v10.9.md  CHANGELOG_v11.0.md  CHANGELOG_v11.1.md  CHANGELOG_v11.2.md  CHANGELOG_v11.3.md  CHANGELOG_v11.4.md  CHANGELOG_v11.5.md  CHANGELOG_v11.6.md  CHANGELOG_v11.7.md  CHANGELOG_v11.8.md  CHANGELOG_v11.9.md  CHANGELOG_v12.0.md  (+177 more)
SecondBrain-Agent/_archive_starters/: README.md  Start-Jarvis-Dev.bat  Start-Jarvis-GUI.bat  Start-Jarvis-GUI.ps1  Start-Jarvis-Native.ps1  Start-Jarvis-WebHUD.bat
SecondBrain-Agent/config/: ai_runtime_v105.yaml  cameras.example.json  cameras.json  connectors.yaml  connectors_v104.json  golden_retrieval.json  hud_settings.json  olden_retrieval.json  providers.yaml  runtime.yaml  runtime_v111.yaml  security_v107.yaml  service.yaml  settings.yaml  voice_layer_v103.yaml
SecondBrain-Agent/connectors/: sample_calendar_export.json  sample_drive_export.json  sample_gmail_export.json
SecondBrain-Agent/docs/: 01_ARCHITEKTUR_UEBERSICHT.md  02_RELEASE_HISTORY.md  03_MODUL_MATRIX.md  04_STARTBEFEHLE.md  05_OFFENE_LUECKEN.md  06_NAECHSTER_ENTWICKLUNGSPLAN.md  07_IMPLEMENTIERUNGSREGELN.md  08_RELEASE_GATE.md  09_MASTERPLAN_STATUS.json  AGENTS_AND_CONNECTORS.md  AGENT_RUNTIME_v11.0.md  AI_RUNTIME_v10.5.md  API_BRIDGE_v11.6.md  AUTOMATION_v11.7.md  AUTONOMY_MODEL.md  CHATGPT_IMPORT_BEGINNER.md  CLIENTS_AND_INTERFACES.md  CONNECTORS.md  CONNECTORS_v12.2.md  CONNECTOR_FRAMEWORK_v16.2.md  CONNECTOR_RUNTIME_v10.4.md  DATABASE_ARCHITECTURE_v16.1.md  DEPENDENCY_INVENTORY_v18_8.md  DEPLOYMENT.md  DESKTOP_OS_PRO_v13.3.md  DESKTOP_OS_v12.5.md  DIGITAL_TWIN_v11.3.md  DIGITAL_TWIN_v12.7.md  DOCUMENT_UNDERSTANDING_v16.3.md  EINSTEIGER_GUIDE_v9.md  FAILURE_MODES.md  FAILURE_MODES_v6_1.md  GEMINI_PERPLEXITY_IMPORT_BEGINNER.md  HYBRID_RAG_v16.7.md  INSTALLER_UPDATE_v15.2.md  JARVIS_HUD_GUI.md  KNOWLEDGE_GRAPH_v12.3.md  KNOWLEDGE_GRAPH_v16.5.md  KNOWLEDGE_INTELLIGENCE_v13.4.md  (+62 more)
(+3698 files in other folders)
