[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secondbrain-agent"
version = "30.25.0"
description = "Local modular SecondBrain/Jarvis runtime with RAG, desktop, mobile, voice and release gates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Markus Dickscheit" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
pdf = [
  "PyMuPDF>=1.24.0",
  "pypdf>=5.0.0",
]
connectors = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]
openai = [
  "openai>=1.40.0",
]
desktop = [
  "psutil>=5.9.0",
]
voice = [
  "SpeechRecognition>=3.10.0",
  "pyttsx3>=2.90",
  "sounddevice>=0.4.6",
]
voice-offline = [
  "faster-whisper>=1.0.0",
  "vosk>=0.3.45",
]
all = [
  "pytest>=8.0.0",
  "PyMuPDF>=1.24.0",
  "pypdf>=5.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "openai>=1.40.0",
  "psutil>=5.9.0",
  "SpeechRecognition>=3.10.0",
  "pyttsx3>=2.90",
  "sounddevice>=0.4.6",
]

[project.scripts]
secondbrain = "launcher:main"

[tool.setuptools]
py-modules = ["launcher"]

[tool.setuptools.packages.find]
include = ["secondbrain", "secondbrain.*"]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --basetemp=.pytest_tmp"
