[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secondbrain-agent"
version = "18.11.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
pdf = ["PyMuPDF>=1.24.0", "pypdf>=5.0.0"]
connectors = ["requests>=2.31.0", "python-dotenv>=1.0.0"]
openai = ["openai>=1.40.0"]
all = ["pytest>=8.0.0", "PyMuPDF>=1.24.0", "pypdf>=5.0.0", "requests>=2.31.0", "python-dotenv>=1.0.0", "openai>=1.40.0"]

[project.scripts]
secondbrain = "launcher:main"

[tool.setuptools.packages.find]
include = ["secondbrain", "secondbrain.*"]
